--- a/shared-style.css
+++ b/shared-style.css
@@ -380,9 +380,9 @@ p.quote-author {
 .entry .hidden { display: none; }
 
 .entry .card {
-  background: #fff;
+  background: #525252;
   border-radius: 12px;
-  padding: 1rem;
+  padding: 12px;
   box-shadow: 0 4px 10px rgba(0,0,0,.08);
   max-width: 680px;
   margin: 1rem auto;
@@ -394,7 +394,7 @@ p.quote-author {
 .entry button {
     font-size: 24px;
     padding: 12px;
-    width: 60%;
+    width: 80%;
     max-width: 600px;
     min-height: 40px;
     background: #F97526;
