--- a/shared-style.css
+++ b/shared-style.css
@@ -438,6 +438,15 @@ p.quote-author {
   margin: 0;
 }
 
+h5 {
+    font-size: 36px;
+    line-height: 1.3;
+    max-width: 90%;
+    margin: -30px auto 20px;
+    color: #F97526;
+    margin-bottom: 60px;
+}
+
 @media (min-width: 900px) {
     body { font-size: 18px; }
     h1 { font-size: 32px; }
